giving background color  to fix bg img jumping on mobile

--- a/css/reiki.scss
+++ b/css/reiki.scss
@@ -6,7 +6,7 @@ body {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  background-color: #439bc1;
 }
 
 .reiki-section {
