--- a/css/test.scss
+++ b/css/test.scss
@@ -6,7 +6,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
-  height: 100vh;
+  background-color: #439bc1;
 }
 
 .page-subtitle {
